# voxey-old

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: main.cpp
src/core/: application.cpp  application.h  engine.cpp  engine.h  logger.cpp  logger.h  test.cpp  test.h
src/ext/: glad.c
src/input/: inputManager.cpp  inputManager.h
src/rendering/: renderer.cpp  renderer.h
src/utils/: time.cpp  time.h
